Remove unused resources.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <permission
+        android:name="${applicationId}.permission.GET_MARKED_LIBRARIES"
+        android:label="@string/permission_label_get_marked_libraries"
+        android:description="@string/permission_label_get_marked_libraries"
+        android:protectionLevel="normal" />
+
     <application
         android:name=".LibCheckerApp"
         android:allowBackup="true"
@@ -93,7 +99,7 @@
             android:authorities="${applicationId}.coreprovider"
             android:enabled="true"
             android:exported="true"
-            android:permission="com.absinthe.libchecker.permission.GET_LIBRARY_INFO" />
+            android:readPermission="${applicationId}.permission.GET_MARKED_LIBRARIES" />
 
     </application>
 
